# MCIntegratorPlusPlus

./: .gitignore  .travis.yml  CMakeLists.txt  LICENSE  README.md  build.sh  build_debug_library.sh  config.sh  config_template.sh
benchmark/: CMakeLists.txt  README.md  profile_tmoves  profile_tmoves2
benchmark/bench_estimators/: main.cpp  plot.py
benchmark/bench_integrate_mixed/: main.cpp  plot.py
benchmark/bench_integrate_nmc/: main.cpp  plot.py
benchmark/bench_max_throughput/: main.cpp
benchmark/bench_throughput_3G/: main.cpp
benchmark/bench_throughput_ndim/: main.cpp  plot.py
benchmark/bench_throughput_ndim_all/: main.cpp
benchmark/bench_throughput_ndim_single/: main.cpp  plot.py
benchmark/bench_throughput_nmc/: main.cpp
benchmark/common/: MCIBenchmarks.hpp  Timer.hpp
debug/: main.cpp  observables.txt  run.sh  walker.txt
debug/unittests/: README.md  run_single_unittest.sh
doc/: .user_manual.lb  user_manual.tex
doc/doxygen/: doxygen.conf  doxygen_stl.cpp
examples/: CMakeLists.txt  README.md
examples/common/: ExampleFunctions.hpp
examples/ex1/: exe  main.cpp  run.sh
examples/ex2/: main.cpp  rseed.txt  run.sh
examples/ex3/: main.cpp
examples/ex_basic/: main.cpp
examples/ex_mpi/: main.cpp  run.sh
examples/testmpi/: main.cpp  run.sh
include/mci/: Clonable.hpp  (+40 more)
res/: rseed.txt  scale_randorg_set.cpp
script/: tidy-check.sh
src/: AccumulatorInterface.cpp  BlockAccumulator.cpp  CMakeLists.txt  Estimators.cpp  Estimators.hpp  FullAccumulator.cpp  MCIAccumulatorInterface.cpp  MCIBlockAccumulator.cpp  MCICallBackOnAcceptanceInterface.hpp  MCIFullAccumulator.cpp  MCIObservableContainer.cpp  MCIObservableFunctionInterface.hpp  MCISamplingFunctionInterface.cpp  MCISamplingFunctionInterface.hpp  MCISamplingFunctionInterface.hpp~  MCISimpleAccumulator.cpp  MCIWrapperMPI.hpp  MCIntegrator.cpp  MCIntegrator.hpp  MCIntegrator.hpp~  MJBlocker.cpp  MPIMCI.cpp  MPIMCI.hpp  MultiStepMove.cpp  ObservableContainer.cpp  OrthoPeriodicDomain.cpp  ProtoFunctionInterface.cpp  SamplingFunctionContainer.cpp  SamplingFunctionInterface.cpp  SimpleAccumulator.cpp
test/: CMakeLists.txt  README.md  main.cpp  run.sh
test/common/: TestMCIFunctions.hpp
test/ut1/: main.cpp
test/ut2/: main.cpp
test/ut3/: main.cpp
test/ut4/: main.cpp
test/ut5/: main.cpp
(+4 files in other folders)
