link_libraries(mci)

add_executable(bench_estimators bench_estimators/main.cpp)
add_executable(bench_integrate_mixed bench_integrate_mixed/main.cpp)
add_executable(bench_throughput_nmc bench_throughput_nmc/main.cpp)
add_executable(bench_throughput_ndim bench_throughput_ndim/main.cpp)
add_executable(bench_throughput_3G bench_throughput_3G/main.cpp)
